--- a/Netflix Analysis/Netflix Analysis.ipynb
+++ b/Netflix Analysis/Netflix Analysis.ipynb
@@ -610,6 +610,15 @@
     "data['Date_N'] = pd.to_datetime(data['Release_Date'])\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.groupby('Category').Category.count()"
+   ]
   }
  ],
  "metadata": {
