--- a/Netflix Analysis/Netflix Analysis.ipynb
+++ b/Netflix Analysis/Netflix Analysis.ipynb
@@ -661,83 +661,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7789, 11)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data.shape"
+    "Finding the Title of all TV Show that are made in India "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Show_Id</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Director</th>\n",
-       "      <th>Cast</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Release_Date</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Show_Id, Category, Title, Director, Cast, Country, Release_Date, Rating, Duration, Type, Description]\n",
-       "Index: []"
+       "86            21 Sarfarosh: Saragarhi 1897\n",
+       "132                              7 (Seven)\n",
+       "340                           Agent Raghav\n",
+       "364                           Akbar Birbal\n",
+       "533                    Anjaan: Rural Myths\n",
+       "                       ...                \n",
+       "6249                  The Creative Indians\n",
+       "6400    The Golden Years with Javed Akhtar\n",
+       "6469                The House That Made Me\n",
+       "7294                            Typewriter\n",
+       "7705                       Yeh Meri Family\n",
+       "Name: Title, Length: 71, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[(['Category']=='TV Show') & (data['Country']=='India')]"
+    "data[ (data['Category']=='TV Show') & (data['Country']=='India') ]['Title']"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding Top 10 Directors through the no. movies and Tv shows they Directed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Director\n",
+       "Raúl Campos, Jan Suter    18\n",
+       "Marcus Raboy              16\n",
+       "Jay Karas                 14\n",
+       "Cathy Garcia-Molina       13\n",
+       "Jay Chapman               12\n",
+       "Youssef Chahine           12\n",
+       "Martin Scorsese           12\n",
+       "Steven Spielberg          10\n",
+       "David Dhawan               9\n",
+       "Robert Rodriguez           8\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Director'].value_counts().head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
